2023 Day 19 - refactor