@@ -3,14 +3,16 @@ package advent2023;
 import lombok.With;
 import lombok.extern.slf4j.Slf4j;
 
-import java.util.*;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 
 import static com.google.common.collect.Lists.newArrayList;
 import static com.google.common.collect.Maps.newHashMap;
-import static com.google.common.collect.Queues.newArrayDeque;
 import static java.lang.Integer.parseInt;
 import static java.util.stream.IntStream.range;
 import static util.Util.fileStream;
@@ -22,36 +24,8 @@ public class Advent19 {
     public Long runP1(String file) {
         String[] split = fileStream(file).collect(Collectors.joining("\n")).split("\n\n");
 
-        Map<String, Workflow> workflowMap = newHashMap();
-        Arrays.stream(split[0].split("\n")).forEach(workflow -> {
-            String[] split1 = workflow.split("\\{");
-            String[] split2 = split1[1].replace("}", "").split(",");
-
-            List<WorkflowRule> workflowRules = newArrayList();
-            Arrays.stream(split2).forEach(rule -> {
-                if (rule.contains(":")) {
-                    String[] split3 = rule.split(":");
-                    String variable = split3[0].charAt(0) + "";
-                    boolean lessThan = split3[0].charAt(1) == '<';
-                    int threshold = parseInt(split3[0].substring(2));
-                    String goToWorkflow = split3[1];
-                    workflowRules.add(new WorkflowRule(variable, lessThan, threshold, goToWorkflow));
-                } else
-                    workflowRules.add(new WorkflowRule(null, true, -1, rule));
-            });
-
-            workflowMap.put(split1[0], new Workflow(split1[0], workflowRules));
-        });
-
-        List<MachinePart> machineParts = Arrays.stream(split[1].split("\\n")).map(part -> {
-            String[] split1 = part.replace("{", "").replace("}", "").split(",");
-
-            int x = parseInt(split1[0].substring(2));
-            int m = parseInt(split1[1].substring(2));
-            int a = parseInt(split1[2].substring(2));
-            int s = parseInt(split1[3].substring(2));
-            return new MachinePart(x, m, a, s);
-        }).toList();
+        Map<String, Workflow> workflowMap = getWorkflowMap(split[0]);
+        List<MachinePart> machineParts = getMachineParts(split[1]);
 
         int sum = machineParts.stream().mapToInt(machinePart -> {
             String ruleName = "in";
@@ -141,33 +115,13 @@ public class Advent19 {
     public Long runP2(String file) {
         String[] split = fileStream(file).collect(Collectors.joining("\n")).split("\n\n");
 
-        Map<String, Workflow> workflowMap = newHashMap();
-        Arrays.stream(split[0].split("\n")).forEach(workflow -> {
-            String[] split1 = workflow.split("\\{");
-            String[] split2 = split1[1].replace("}", "").split(",");
-
-            List<WorkflowRule> workflowRules = newArrayList();
-            Arrays.stream(split2).forEach(rule -> {
-                if (rule.contains(":")) {
-                    String[] split3 = rule.split(":");
-                    String variable = split3[0].charAt(0) + "";
-                    boolean lessThan = split3[0].charAt(1) == '<';
-                    int threshold = parseInt(split3[0].substring(2));
-                    String goToWorkflow = split3[1];
-                    workflowRules.add(new WorkflowRule(variable, lessThan, threshold, goToWorkflow));
-                } else
-                    workflowRules.add(new WorkflowRule(null, true, -1, rule));
-            });
-
-            workflowMap.put(split1[0], new Workflow(split1[0], workflowRules));
-        });
+        Map<String, Workflow> workflowMap = getWorkflowMap(split[0]);
 
         List<List<WorkflowRule>> in = process(workflowMap, workflowMap.get("in"));
 
         AtomicLong count = new AtomicLong(0L);
         in.forEach(workflowRules -> {
-            boolean a = workflowRules.get(workflowRules.size() - 1).goToWorkflow.equals("A");
-            if (a) {
+            if (workflowRules.getLast().goToWorkflow.equals("A")) {
                 AtomicReference<WorkflowInterval> interval = new AtomicReference<>(new WorkflowInterval(
                         range(1, 4001).boxed().collect(Collectors.toSet()),
                         range(1, 4001).boxed().collect(Collectors.toSet()),
@@ -191,10 +145,10 @@ public class Advent19 {
                 List<List<WorkflowRule>> process = process(workflowMap, workflowMap.get(workflow.conditions.get(c1).goToWorkflow));
 
                 WorkflowRule parent = workflow.conditions.get(c1);
-                process.forEach(list -> list.add(0, parent));
+                process.forEach(list -> list.addFirst(parent));
                 for (int c2 = 0; c2 < c1; c2++) {
                     WorkflowRule previous = workflow.conditions.get(c2);
-                    process.forEach(list -> list.add(0, previous.invert()));
+                    process.forEach(list -> list.addFirst(previous.invert()));
                 }
 
                 workflowRules.addAll(process);
@@ -204,6 +158,43 @@ public class Advent19 {
         }
 
         return workflowRules;
+    }
+
+    private static Map<String, Workflow> getWorkflowMap(String workflowLines) {
+        Map<String, Workflow> workflowMap = newHashMap();
+        Arrays.stream(workflowLines.split("\n")).forEach(workflow -> {
+            String[] split1 = workflow.split("\\{");
+            String[] split2 = split1[1].replace("}", "").split(",");
+
+            List<WorkflowRule> workflowRules = newArrayList();
+            Arrays.stream(split2).forEach(rule -> {
+                if (rule.contains(":")) {
+                    String[] split3 = rule.split(":");
+                    String variable = split3[0].charAt(0) + "";
+                    boolean lessThan = split3[0].charAt(1) == '<';
+                    int threshold = parseInt(split3[0].substring(2));
+                    String goToWorkflow = split3[1];
+                    workflowRules.add(new WorkflowRule(variable, lessThan, threshold, goToWorkflow));
+                } else
+                    workflowRules.add(new WorkflowRule(null, true, -1, rule));
+            });
+
+            workflowMap.put(split1[0], new Workflow(split1[0], workflowRules));
+        });
+        return workflowMap;
+    }
+
+    private static List<MachinePart> getMachineParts(String machinePartList) {
+        return Arrays.stream(machinePartList.split("\\n")).map(part -> {
+            String[] variables = part.replace("{", "")
+                    .replace("}", "")
+                    .split(",");
+            int x = parseInt(variables[0].substring(2));
+            int m = parseInt(variables[1].substring(2));
+            int a = parseInt(variables[2].substring(2));
+            int s = parseInt(variables[3].substring(2));
+            return new MachinePart(x, m, a, s);
+        }).toList();
     }
 
     record Workflow(String name, List<WorkflowRule> conditions) {
